--- a/schemas/content-types/multi-image.yaml
+++ b/schemas/content-types/multi-image.yaml
@@ -9,12 +9,12 @@ properties:
         type: integer
         minimum: 2
         default: 2
-        description: Minimum number of images required
+        description: minimum number of images required
       max:
         type: integer
         maximum: 10
         default: 10
-        description: Maximum number of images allowed
+        description: maximum number of images allowed
   format:
     type: object
     properties:
@@ -22,18 +22,18 @@ properties:
         type: string
         enum: [square, portrait, landscape]
         default: square
-        description: Required aspect ratio for all images
+        description: required aspect ratio for all images
       consistent:
         type: boolean
         default: true
-        description: Whether all images must have the same dimensions
+        description: whether all images must have the same dimensions
       max_file_size:
         type: integer
-        description: Maximum file size per image in bytes
+        description: maximum file size per image in bytes
   per_image_text:
     type: boolean
     default: false
-    description: Whether each image can have its own caption/description
+    description: whether each image can have its own caption/description
   transitions:
     type: object
     properties:
@@ -41,8 +41,8 @@ properties:
         type: string
         enum: [slide, fade, none]
         default: slide
-        description: Type of transition between images
+        description: type of transition between images
       auto_play:
         type: boolean
         default: false
-        description: Whether to auto-advance through images
+        description: whether to auto-advance through images
