--- a/schemas/common/fonts.yaml
+++ b/schemas/common/fonts.yaml
@@ -1,61 +1,61 @@
 # Font definitions for use by both backend and frontend
 fonts:
-  - family: Arial
-    display_name: Arial
+  - family: arial
+    display_name: arial
     styles:
-      regular: https://storautogensocial.blob.core.windows.net/fonts/Arial.ttf
-      bold: https://storautogensocial.blob.core.windows.net/fonts/Arial%20Bold.ttf
-      italic: https://storautogensocial.blob.core.windows.net/fonts/Arial%20Italic.ttf
-      bold_italic: https://storautogensocial.blob.core.windows.net/fonts/Arial%20Bold%20Italic.ttf
-  - family: Arial Narrow
-    display_name: Arial Narrow
+      regular: https://storautogensocial.blob.core.windows.net/fonts/arial.ttf
+      bold: https://storautogensocial.blob.core.windows.net/fonts/arial%20bold.ttf
+      italic: https://storautogensocial.blob.core.windows.net/fonts/arial%20italic.ttf
+      bold_italic: https://storautogensocial.blob.core.windows.net/fonts/arial%20bold%20italic.ttf
+  - family: arial_narrow
+    display_name: arial_narrow
     styles:
-      regular: https://storautogensocial.blob.core.windows.net/fonts/Arial%20Narrow.ttf
-      bold: https://storautogensocial.blob.core.windows.net/fonts/Arial%20Narrow%20Bold.ttf
-      italic: https://storautogensocial.blob.core.windows.net/fonts/Arial%20Narrow%20Italic.ttf
-      bold_italic: https://storautogensocial.blob.core.windows.net/fonts/Arial%20Narrow%20Bold%20Italic.ttf
-  - family: Comic Sans MS
-    display_name: Comic Sans MS
+      regular: https://storautogensocial.blob.core.windows.net/fonts/arial%20narrow.ttf
+      bold: https://storautogensocial.blob.core.windows.net/fonts/arial%20narrow%20bold.ttf
+      italic: https://storautogensocial.blob.core.windows.net/fonts/arial%20narrow%20italic.ttf
+      bold_italic: https://storautogensocial.blob.core.windows.net/fonts/arial%20narrow%20bold%20italic.ttf
+  - family: comic_sans_ms
+    display_name: comic_sans_ms
     styles:
-      regular: https://storautogensocial.blob.core.windows.net/fonts/Comic%20Sans%20MS.ttf
-      bold: https://storautogensocial.blob.core.windows.net/fonts/Comic%20Sans%20MS%20Bold.ttf
-  - family: Courier New
-    display_name: Courier New
+      regular: https://storautogensocial.blob.core.windows.net/fonts/comic%20sans%20ms.ttf
+      bold: https://storautogensocial.blob.core.windows.net/fonts/comic%20sans%20ms%20bold.ttf
+  - family: courier_new
+    display_name: courier_new
     styles:
-      regular: https://storautogensocial.blob.core.windows.net/fonts/Courier%20New.ttf
-      bold: https://storautogensocial.blob.core.windows.net/fonts/Courier%20New%20Bold.ttf
-      italic: https://storautogensocial.blob.core.windows.net/fonts/Courier%20New%20Italic.ttf
-      bold_italic: https://storautogensocial.blob.core.windows.net/fonts/Courier%20New%20Bold%20Italic.ttf
-  - family: Georgia
-    display_name: Georgia
+      regular: https://storautogensocial.blob.core.windows.net/fonts/courier%20new.ttf
+      bold: https://storautogensocial.blob.core.windows.net/fonts/courier%20new%20bold.ttf
+      italic: https://storautogensocial.blob.core.windows.net/fonts/courier%20new%20italic.ttf
+      bold_italic: https://storautogensocial.blob.core.windows.net/fonts/courier%20new%20bold%20italic.ttf
+  - family: georgia
+    display_name: georgia
     styles:
-      regular: https://storautogensocial.blob.core.windows.net/fonts/Georgia.ttf
-      bold: https://storautogensocial.blob.core.windows.net/fonts/Georgia%20Bold.ttf
-      italic: https://storautogensocial.blob.core.windows.net/fonts/Georgia%20Italic.ttf
-      bold_italic: https://storautogensocial.blob.core.windows.net/fonts/Georgia%20Bold%20Italic.ttf
-  - family: Tahoma
-    display_name: Tahoma
+      regular: https://storautogensocial.blob.core.windows.net/fonts/georgia.ttf
+      bold: https://storautogensocial.blob.core.windows.net/fonts/georgia%20bold.ttf
+      italic: https://storautogensocial.blob.core.windows.net/fonts/georgia%20italic.ttf
+      bold_italic: https://storautogensocial.blob.core.windows.net/fonts/georgia%20bold%20italic.ttf
+  - family: tahoma
+    display_name: tahoma
     styles:
-      regular: https://storautogensocial.blob.core.windows.net/fonts/Tahoma.ttf
-      bold: https://storautogensocial.blob.core.windows.net/fonts/Tahoma%20Bold.ttf
-  - family: Times New Roman
-    display_name: Times New Roman
+      regular: https://storautogensocial.blob.core.windows.net/fonts/tahoma.ttf
+      bold: https://storautogensocial.blob.core.windows.net/fonts/tahoma%20bold.ttf
+  - family: times_new_roman
+    display_name: times_new_roman
     styles:
-      regular: https://storautogensocial.blob.core.windows.net/fonts/Times%20New%20Roman.ttf
-      bold: https://storautogensocial.blob.core.windows.net/fonts/Times%20New%20Roman%20Bold.ttf
-      italic: https://storautogensocial.blob.core.windows.net/fonts/Times%20New%20Roman%20Italic.ttf
-      bold_italic: https://storautogensocial.blob.core.windows.net/fonts/Times%20New%20Roman%20Bold%20Italic.ttf
-  - family: Trebuchet MS
-    display_name: Trebuchet MS
+      regular: https://storautogensocial.blob.core.windows.net/fonts/times%20new%20roman.ttf
+      bold: https://storautogensocial.blob.core.windows.net/fonts/times%20new%20roman%20bold.ttf
+      italic: https://storautogensocial.blob.core.windows.net/fonts/times%20new%20roman%20italic.ttf
+      bold_italic: https://storautogensocial.blob.core.windows.net/fonts/times%20new%20roman%20bold%20italic.ttf
+  - family: trebuchet_ms
+    display_name: trebuchet_ms
     styles:
-      regular: https://storautogensocial.blob.core.windows.net/fonts/Trebuchet%20MS.ttf
-      bold: https://storautogensocial.blob.core.windows.net/fonts/Trebuchet%20MS%20Bold.ttf
-      italic: https://storautogensocial.blob.core.windows.net/fonts/Trebuchet%20MS%20Italic.ttf
-      bold_italic: https://storautogensocial.blob.core.windows.net/fonts/Trebuchet%20MS%20Bold%20Italic.ttf
-  - family: Verdana
-    display_name: Verdana
+      regular: https://storautogensocial.blob.core.windows.net/fonts/trebuchet%20ms.ttf
+      bold: https://storautogensocial.blob.core.windows.net/fonts/trebuchet%20ms%20bold.ttf
+      italic: https://storautogensocial.blob.core.windows.net/fonts/trebuchet%20ms%20italic.ttf
+      bold_italic: https://storautogensocial.blob.core.windows.net/fonts/trebuchet%20ms%20bold%20italic.ttf
+  - family: verdana
+    display_name: verdana
     styles:
-      regular: https://storautogensocial.blob.core.windows.net/fonts/Verdana.ttf
-      bold: https://storautogensocial.blob.core.windows.net/fonts/Verdana%20Bold.ttf
-      italic: https://storautogensocial.blob.core.windows.net/fonts/Verdana%20Italic.ttf
-      bold_italic: https://storautogensocial.blob.core.windows.net/fonts/Verdana%20Bold%20Italic.ttf
+      regular: https://storautogensocial.blob.core.windows.net/fonts/verdana.ttf
+      bold: https://storautogensocial.blob.core.windows.net/fonts/verdana%20bold.ttf
+      italic: https://storautogensocial.blob.core.windows.net/fonts/verdana%20italic.ttf
+      bold_italic: https://storautogensocial.blob.core.windows.net/fonts/verdana%20bold%20italic.ttf
