--- a/schemas/content-types/text.yaml
+++ b/schemas/content-types/text.yaml
@@ -3,32 +3,32 @@ description: Settings specific to text-based content
 properties:
   max_length:
     type: integer
-    description: Maximum length of the text content in characters
+    description: maximum length of the text content in characters
   media_attachments:
     type: object
     properties:
       allowed:
         type: boolean
-        description: Whether media attachments are allowed with this text content
+        description: whether media attachments are allowed with this text content
       max_count:
         type: integer
-        description: Maximum number of media attachments allowed
+        description: maximum number of media attachments allowed
       types:
         type: array
         items:
           type: string
           enum: [image, gif, video]
-        description: Types of media attachments allowed
+        description: types of media attachments allowed
   formatting:
     type: object
     properties:
       allow_markdown:
         type: boolean
-        description: Whether markdown formatting is allowed
+        description: whether markdown formatting is allowed
       allow_html:
         type: boolean
-        description: Whether HTML formatting is allowed
+        description: whether html formatting is allowed
       allow_emoji:
         type: boolean
         default: true
-        description: Whether emoji are allowed in the text
+        description: whether emoji are allowed in the text
