--- a/schemas/content-types/video.yaml
+++ b/schemas/content-types/video.yaml
@@ -6,45 +6,45 @@ properties:
     properties:
       min:
         type: integer
-        description: Minimum duration in seconds
+        description: minimum duration in seconds
       max:
         type: integer
-        description: Maximum duration in seconds
+        description: maximum duration in seconds
   format:
     type: object
     properties:
-      aspectRatio:
+      aspect_ratio:
         type: string
         enum: [square, portrait, landscape, vertical]
         default: vertical
-        description: Video aspect ratio
+        description: video aspect ratio
       resolution:
         type: object
         properties:
           width:
             type: integer
-            description: Video width in pixels
+            description: video width in pixels
           height:
             type: integer
-            description: Video height in pixels
+            description: video height in pixels
   audio:
     type: object
     properties:
       required:
         type: boolean
-        description: Whether audio is required
-      backgroundMusic:
+        description: whether audio is required
+      background_music:
         type: boolean
-        description: Whether background music should be included
+        description: whether background music should be included
       voiceover:
         type: boolean
-        description: Whether voiceover should be included
+        description: whether voiceover should be included
   captions:
     type: object
     properties:
       required:
         type: boolean
-        description: Whether captions are required
+        description: whether captions are required
       style:
         type: string
         enum: [subtitle, overlay, none]
